# looking-for-group

./: .bumpversion.cfg  .coveragerc  .editorconfig  .gitignore  .gitlab-ci.yml  .overcommit.yml  CHANGELOG.rst  LICENSE  Makefile  Pipfile  Procfile  README.rst  conftest.py  gulpfile.js  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  verify.py
.ebextensions/: deploy.config  deploy.sh  django.config  utils.sh
.ebextensions/files/: 99_restart_services.sh  django.conf  djangoq.conf  launch_worker
.pytest_cache/v/cache/: nodeids
config/: api_routers.py  hello_wsgi.py  nginx.conf.erb  rating_url_override.py  run.py  urls.py  wsgi.py
config/middleware/: forwarded_host.py
config/settings/: base.py  local.py  production.py  test.py
docs/: Makefile  conf.py  index.rst  make.bat
looking_for_group/: __init__.py  context_processors.py  mixins.py
looking_for_group/adminutils/: apps.py  forms.py  rules.py  tasks.py  urls.py  views.py
looking_for_group/adminutils/tests/: fixtures.py  test_accessibility.py  test_tasks.py  test_views.py
looking_for_group/discord/: __init__.py  admin.py  apps.py  models.py  permissions.py  provider.py  receivers.py  signals.py  tasks.py  tests.py  urls.py  views.py
looking_for_group/discord/migrations/: 0001_initial.py  0002_auto_20180822_1742.py  0002_auto_20180826_1335.py  0003_commlink.py  0003_gamerdiscordlink_socialaccount.py
looking_for_group/discord/templatetags/: discord_tags.py
looking_for_group/discord/tests/: test_discord.py
looking_for_group/game_catalog/: admin.py  api_views.py  apps.py  forms.py  models.py  receivers.py  routers.py  rules.py  search_indexes.py  serializers.py  urls.py  utils.py  views.py
looking_for_group/game_catalog/fixtures/: content_types.json  game_publisher.json  game_system.json  game_tags.json  published_game.json  system_tags.json  tagged_items.json  tags.json
looking_for_group/game_catalog/migrations/: 0001_initial.py  0002_auto_20180611_1349.py  0003_auto_20180611_1635.py  0004_auto_20180623_1418.py  0005_auto_20180623_1430.py  0006_auto_20180828_1415.py  0007_auto_20180830_1915.py  0008_auto_20181104_0934.py  0009_auto_20181104_1033.py  0010_auto_20181104_1036.py  0011_publishedmodule_parent_game_edition.py  0012_auto_20181105_1302.py  0013_auto_20181118_2129.py  0014_gamepublisher_description.py  0015_auto_20190424_1042.py  0016_sourcebook_publisher.py  0017_sourcebook_publisher.py  0018_auto_20190425_1333.py  0019_auto_20190426_0923.py  0020_auto_20190501_2052.py  0021_auto_20190502_1427.py  0022_auto_20190502_1428.py  0023_auto_20191023_1019.py  0024_add_slugs_to_game_system_publisher_module.py
looking_for_group/game_catalog/templatetags/: catalog_tags.py
looking_for_group/game_catalog/tests/: fixtures.py  models.py  test_accessibility.py  test_api.py  test_forms.py  test_models.py  test_receivers.py  test_views.py
looking_for_group/gamer_profiles/: admin.py  api_views.py  apps.py  forms.py  lookups.py  models.py  receivers.py  routers.py  rules.py  search_indexes.py  serializers.py  urls.py  views.py
looking_for_group/games/: admin.py  api_views.py  apps.py  feeds.py  forms.py  mixins.py  models.py  receivers.py  routers.py  rules.py  search_indexes.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
looking_for_group/helpdesk/: admin.py  apps.py  models.py  receivers.py  rules.py  signals.py  tasks.py  urls.py  utils.py  views.py
looking_for_group/invites/: admin.py  apps.py  models.py  rules.py  signals.py  tasks.py  urls.py  views.py
looking_for_group/locations/: admin.py  apps.py  forms.py  models.py  tasks.py
looking_for_group/mailnotify/: admin.py  apps.py  models.py  receivers.py  rules.py  urls.py  utils.py  views.py
looking_for_group/motd/: admin.py  apps.py  context_processor.py  models.py
looking_for_group/releasenotes/: __init__.py  admin.py  apps.py  models.py  receivers.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
looking_for_group/rpgcollections/: admin.py  apps.py  forms.py  models.py  receivers.py  rules.py  tasks.py  urls.py  utils.py  views.py
looking_for_group/static/: config.json
looking_for_group/templates/: 403.html  403_csrf.html  404.html  500.html  base.html  base_form.html  datepicker_css.html  datepicker_js.html  datepicker_logic.html  is_active_definition.html  og_graph.html  privacy.html  switch_control.html  tos.html
looking_for_group/tours/: admin.py  apps.py  context_processors.py  models.py  receivers.py
looking_for_group/user_preferences/: admin.py  apps.py  forms.py  models.py  receivers.py  tasks.py  urls.py  utils.py  views.py
looking_for_group/users/: adapters.py  admin.py  apps.py  forms.py  middleware.py  models.py  urls.py  validators.py  views.py
looking_for_group/world/: admin.py  apps.py  models.py
packerscripts/: install-poetry.sh  install_code_and_set_permissions.sh  install_local_dependencies.sh  make_aws_directories.sh  make_environment.sh  prepare_static_and_wsgi_files.sh  web-template.json  worker-template.json
packerscripts/files/: djangoq.conf  lfg.conf  nginx.conf  start_web.sh  start_worker.sh
utility/: sync_pipenv_to_req.sh
utility/packerscripts/: install-poetry.sh  install_code_and_set_permissions.sh  install_nginx_configure.sh  make_aws_directories.sh  make_environment.sh  shutdown-apt-services.sh  web-template.json  worker-template.json
(+524 files in other folders)
