[tool.poetry]
name = "django-looking-for-group"
version = "1.12.0"
description = "An RPG group finding and campaign management application."
authors = ["Daniel Andrlik <daniel@andrlik.org>"]

[tool.poetry.dependencies]
python = "~3.6 || ^3.7 || ^3.8"
pytz = "=2019.1"
text-unidecode = "=1.2"
pillow = "=6.0.0"
rcssmin = "~1.0.6"
rjsmin = "~1.1.0"
argon2-cffi = "-19.1.0"
redis = "~3.4.1"
django-environ = "~0.4.5"
django-model-utils = "~4.0.0"
django-allauth = "~0.41.0"
django-foundation-formtags = "~0.1.0"
django-compressor = "~2.4"
django-libsass = "~0.8"
django-redis = "~4.11.0"
djangorestframework = "~3.11.0"
coreapi = "~2.3.3"
waitress = "~1.4.3"
django-anymail = "~7.0.0"
django-storages = "~1.9.1"
django-avatar = "~5.0.0"
pwned-passwords-django = "~1.4.0"
django-cookie-law = "~2.0.1"
python-stdnum = "=1.11"
django-isbn-field = "~0.5.2"
django-taggit = "~1.2.0"
django-taggit-serializer = "~0.1.7"
django-braces = "~1.14.0"
rules = "^2.2"
django-filter = "~2.2.0"
markdown = "~3.1.1"
bleach = "~3.1.0"
bleach-whitelist = "~0.0.10"
django-star-ratings = "~0.9.1"
django-q = "~1.2.1"
django-extensions = "~2.2.8"
boto3 = "~1.12.0"
django-registration = "~3.1.0"
django-ical = "=1.7.0"
django-notifications-hq = "~1.6.0"
elasticsearch = "<6"
django-markdown-filter = "~0.0.1"
django-node-assets = "~0.9.7"
factory-boy = "~2.12.0"
django-allow-cidr = "~0.3.1"
django-ajax-selects = "~1.9.1"
django-markdownify = "~0.8.0"
psycopg2-binary = "~2.8.2"
django = "~3.0.0"
numpy = "~1.16.4"
geopy = "~1.20.0"
django-haystack = { git = "https://github.com/andrlik/django-haystack.git", rev = "0c32a4c2fe04701a5ae04a59d2db8d80a98fe585" }
sentry-sdk = "^0.9.0"
python-gitlab = "^1.11"
django-allauth-2fa = "^0.8.0"
drf-extensions = "^0.6.0"
drf-writable-nested = "^0.5.4"
drf_yasg = "^1.17"
django-oauth-toolkit = "^1.2"
semantic_version = "^2.8"
rst_to_md = {git = "https://github.com/sixty-north/rst_to_md"}
ipython = "^7.9"
django-cors-headers = "^3.2"
whitenoise = {version = "^4.1",extras = ["brotli"]}
django-scheduler = "^0.9.3"
django-postman = {git = "https://gitlab.com/andrlik/django-postman.git", rev = "2ea354d72c4c7ab9a79d424a81edc4f442fef7f9"}
django-keybase-proofs = {git = "https://github.com/andrlik/django-keybase-proofs.git", rev = "master"}
django-jsonview = {git = "https://github.com/andrlik/django-jsonview.git", rev = "master"}

[tool.poetry.dev-dependencies]
sphinx = "~2.1.1"
pytest = "~5.3.5"
pytest-sugar = "~0.9.2"
pytest-cov = "~2.8.1"
pytest-xdist = "~1.31.0"
flake8 = "^3.7.9"
coverage = "~4.5.3"
django-test-plus = "~1.4.0"
django-coverage-plugin = "~1.6.0"
pytest-env = "~0.6.2"
bumpversion = "~0.5.3"
pypom = "~2.2.0"
pytest-selenium = "~1.17.0"
axe-selenium-python = "~2.1.6"
isort = "^4.3"
pytest-django = "^3.8"
django-debug-toolbar = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
